--- a/routine.html
+++ b/routine.html
@@ -138,8 +138,6 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Daily Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td>6:00 AM </td><td>Turn on lights at full brightness to set circadian rhythm</td>
-<tr><td>        </td><td>Occasionally weigh self on scale</td>
-<tr><td>        </td><td>Occasionally check heart rate variability</td>
 <tr><td>        </td><td>Molecular hydrogen, one tablet in one cup of water</td>
 <tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td>
 <tr><td>        </td><td>Rinse mouth with xylitol tablets </td>
@@ -253,7 +251,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Practice intermittent hypoxic training </td>
 <tr><td>        </td><td>Look far away </td>
 </table>
-    
+
 <br>
 <p><b>Monthly Routine</b></p>
 <table style="celllpadding: 100px">
@@ -315,12 +313,27 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 </table>
 
 <br>
-<p><b>Occasional Routine</b></p>
+<p><b>Occasional home tests</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Urine pH strip test</td>
+<tr><td> </td><td>Weigh self on scale</td>
+<tr><td> </td><td>Measure heart rate variability, use iPhone Welltory app</td>
+<tr><td> </td><td>Measure VO2 max, use Apple watch</td>
+<tr><td> </td><td>Measure urine pH strip test</td>
+<tr><td> </td><td>Measure blood pressure</td>
 <tr><td> </td><td>Nitric oxide strip test</td>
 <tr><td> </td><td>Measure arterial pulse wave velocity on a Withings scale </td>
 <tr><td> </td><td>Measure BOLT score (Body Oxygen Level Test)</td>
+<tr><td> </td><td>Check humidity level of home</td>
+<tr><td> </td><td>Test home for mold</td>
+<tr><td> </td><td>Test water for contaminants</td>
+<tr><td> </td><td>Test home for EMFs</td>
+<!--<tr><td> </td><td>Zinc taste test</td>-->
+<!--<tr><td> </td><td>Check stool is not floating</td>-->
+</table>
+
+<br>
+<p><b>Occasional lab tests</b></p>
+<table style="celllpadding: 100px">
 <tr><td> </td><td>NAD testing, Jinfiniti</td>  <!--Bryan Johnson used Jinfiniti April 2023-->
 <tr><td> </td><td>Genova Diagnostics, ION Panel</td>
 <tr><td> </td><td>Prodrome Sciences, ProdromeScan</td>
@@ -330,19 +343,17 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Great Plains Labs, GPLTOX</td>
 <tr><td> </td><td>Cyrex Array 10 - Food Immune Reactivity Screen</td>
 <!--<tr><td> </td><td>Cyrex Array 2 - Intestinal Antigenic Permeability Screen</td> --> <!-- Actionable?-->
-<tr><td> </td><td>AgingSOS Advanced Panel, Jinfiniti</td>
+<tr><td> </td><td>AgingSOS Advanced Panel, Jinfiniti</td>        
+<tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations found</td>
+</table>
+
+<br>
+<p><b>Occasional review</b></p>
+<table style="celllpadding: 100px">
 <tr><td> </td><td>Review genetic data at PureGenomics <a href="https://www.puregenomics.com/" target="_blank">Link</a></td>
 <tr><td> </td><td>Review EWG water filter functionality <a href="https://www.ewg.org/tapwater/system.php?pws=CA0710003" target="_blank">Link</a></td>
 <tr><td> </td><td>Review Bristle dental microbiome results <a href="https://www.bristlehealth.com/" target="_blank">Link</a></td>
 <tr><td> </td><td>Review nutrition at cronometer.com</td>
-<tr><td> </td><td>Check blood pressure</td>
-<tr><td> </td><td>Check humidity level of home</td>
-<tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations found</td>
-<tr><td> </td><td>Test home for mold</td>
-<tr><td> </td><td>Test water for contaminants</td>
-<tr><td> </td><td>Test home for EMFs</td>
-<tr><td> </td><td>Zinc taste test</td>
-<!--<tr><td> </td><td>Check stool is not floating</td>-->
 </table>
 
 <br>
