--- a/young-plasma.html
+++ b/young-plasma.html
@@ -209,6 +209,7 @@
             Multi-omic rejuvenation and life span extension on exposure to youthful circulation<br>
             <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/37500973/">https://pubmed.ncbi.nlm.nih.gov/37500973/</a> <br>
             "drastically reduced the epigenetic age of blood and liver based on several clock models using two independent platforms." <br>
+            "we demonstrate here for the first time that exposure to the young circulatory system leads to systemic and persistent reversal of biological age, and this effect correlates with a longer lifespan, improved physiological parameters, and a rejuvenated epigenome and transcriptome." <br> <!--caution this line came from preprint not article, because article is behind paywall-->
             <br>
 
             2022 March<br>
