--- a/routine.html
+++ b/routine.html
@@ -144,18 +144,18 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Brisk walk outside 30 minutes</td>
 <tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td> <!-- before sunscreen else it blocks red/IR light?-->
 <tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td>
-<!--<tr><td>        </td><td>Maragen ionic calcium in two cups of water</td>-->
+<!--<tr>        <td></td><td>Maragen ionic calcium in two cups of water</td>-->
 <tr><td>        </td><td>Start work, listen to AudioCardio app for one hour </td>
 <!--<tr><td>      </td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
 <tr><td>8:00 AM </td><td>Go outside in the sun to set circadian rhythm</td>
 <tr><td>8:30 AM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td>
-<tr><td>9:00 AM </td><td>Breakfast</td>   
+<tr><td>9:00 AM </td><td>Breakfast</td>
 <tr><td>        </td><td>Two pastured eggs and sunflower greens </td>
-<tr><td>        </td><td>Blend avocado, frisee, endive, blackberries, pomegranate seeds, lime or lemon juice, water.</td>
+<tr><td>        </td><td>Blend avocado, frisee, bok choy, blackberries, pomegranate seeds, lime or lemon juice, water.</td>
 <tr><td>        </td><td>The prebiotic vegetables above such as frisee etc are varied daily to create a diverse microbiome</td>
 <tr><td>        </td><td>Macadamia nuts</td>
 <tr><td>        </td><td>Olive oil, 1 tbsp</td>
-<!--<tr><td>        </td><td>Vegetable prebiotic mashup drink</td>-->
+<!--<tr>        <td></td><td>Vegetable prebiotic mashup drink</td>-->
 <tr><td>        </td><td><b>Morning supplements:</b></td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Vitamin D3, Jarrow, 5000IU</td>
@@ -184,7 +184,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Fermented Beet Powder, 2 servings</td>
 <tr><td>        </td><td>Ceylon Cinnamon powder, 1/2 tsp</td>
 <tr><td>        </td><td>Parsley powder, 1/2 tsp</td>
-<!--<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>-->
+<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
+<tr><td>        </td><td>Mushroom powders...</td>
 <!--<tr><td>        </td><td>Ginger powder, 1/2 tsp</td>-->
 <!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>-->
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td>-->
