--- a/services.html
+++ b/services.html
@@ -150,15 +150,17 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-9 col-xl-10">
 
+            Available now: <br />
             <a href="plasma-dilution.html">Plasma Dilution</a> <br />
-            <a href="young-plasma.html">Young Plasma</a> <br />
             <br />
 
             Coming soon: <br />
+            EBOO/EBO2 + UV Blood Irradiation<br />
+            <a href="young-plasma.html">Young Plasma</a> <br />
             <a href="vsels.html">VSEL Stem Cells</a> <br />
+            Hyperbaric oxygen therapy <br />
+            Galleri multi-cancer early detection <br />
             Lipoprotein apheresis <br />
-            EBOO / EBO2 / Extracorporeal Blood Ozone And Oxygenation <br />
-            Ultraviolet Blood Irradiation <br />
             Brain Frequency <br />
             Transcranial Magnetic Stimulation <br />
             Neurofeedback from Peak Brain Institute<br />
