--- a/routine.html
+++ b/routine.html
@@ -164,10 +164,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Lycopene 10 mg, NOW Foods, 1 capsule</td>
 <tr><td>        </td><td>Arterosil, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Biotin 5mg, Allergy Research Group, 1 capsule</td>
-<tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule <a href="https://pubmed.ncbi.nlm.nih.gov/35708049/" target="_blank">Link</a></td>  <!-- sandra kaufman, david minkoff video 4 years ago-->
-<tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules</td>
+<tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule <a href="https://pubmed.ncbi.nlm.nih.gov/35708049/" target="_blank">Link</a> </td>  <!-- sandra kaufman, david minkoff video 4 years ago-->
+<tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9686558/" target="_blank">Link</a> </td>
 <tr><td>        </td><td>Black Cumin Seed Oil, Sports Nutrition, 1 capsule</td>
-<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a></td>
+<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a> </td>
 <!--<tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>-->
 <!--<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>-->
 <tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td>
