--- a/plasma-dilution.html
+++ b/plasma-dilution.html
@@ -246,41 +246,47 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-9 col-xl-10">
 
-            <h2>Science</h2>
+            <h2>Human Studies</h2>
 
             2022 August<br>
             Old plasma dilution reduces human biological age: a clinical study <br>
             <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/35999337/">https://pubmed.ncbi.nlm.nih.gov/35999337/</a> <br>
             <br>    
 
-            2022 August<br>
-            Systemic induction of senescence in young mice after single heterochronic blood exchange <br>
-            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/35902645/">https://pubmed.ncbi.nlm.nih.gov/35902645/</a> <br>
-            <br>    
+            2020 October <br>
+            A randomized, controlled clinical trial of plasma exchange with albumin replacement for Alzheimer's disease: Primary results of the AMBAR Study <br>
+            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/32715623/">https://pubmed.ncbi.nlm.nih.gov/32715623/</a> <br>
+            <br>
+
+            <h2>Case Reports</h2>
 
             2022 April<br>
             Case Report: Therapeutic and immunomodulatory effects of plasmapheresis in long-haul COVID <br>
             <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/35464182/">https://pubmed.ncbi.nlm.nih.gov/35464182/</a> <br>
             <br>    
 
+            <h2>Review Articles</h2>
+
             2021 June <br>
             Attenuation of age-elevated blood factors by repositioning plasmapheresis: A novel perspective and approach <br>
             <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/34083162/">https://pubmed.ncbi.nlm.nih.gov/34083162/</a> <br>
             <br>   
 
-            2021 Aug <br>
+            2021 August <br>
             Therapeutic plasma exchange with albumin: a new approach to treat Alzheimer's disease <br>
             <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/34338566/">https://pubmed.ncbi.nlm.nih.gov/34338566/</a> <br>
             <br>   
 
+            <h2>Animal Studies</h2>
+
+            2022 August<br>
+            Systemic induction of senescence in young mice after single heterochronic blood exchange <br>
+            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/35902645/">https://pubmed.ncbi.nlm.nih.gov/35902645/</a> <br>
+            <br>    
+
             2021 February <br>
             Plasma dilution improves cognition and attenuates neuroinflammation in old mice <br>
             <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/33191466/">https://pubmed.ncbi.nlm.nih.gov/33191466/</a> <br>
-            <br>
-
-            2020 October <br>
-            A randomized, controlled clinical trial of plasma exchange with albumin replacement for Alzheimer's disease: Primary results of the AMBAR Study <br>
-            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/32715623/">https://pubmed.ncbi.nlm.nih.gov/32715623/</a> <br>
             <br>
 
             2020 May <br>
