--- a/young-plasma.html
+++ b/young-plasma.html
@@ -205,6 +205,20 @@
 
             <h2>Science</h2>
 
+            <!--
+            https://pubmed.ncbi.nlm.nih.gov/33161876/
+            Plasma from Young Rats Injected into Old Rats Induce Antiaging Effects
+
+            https://www.biorxiv.org/content/10.1101/2022.12.01.518747v1
+            YOUNG PLASMA REJUVENATES BLOOD DNA METHYLATION PROFILE, PROLONGS MEAN LIFESPAN AND IMPROVES HEALTH IN OLD RATS
+
+            https://pubmed.ncbi.nlm.nih.gov/30383097/
+            Safety, Tolerability, and Feasibility of Young Plasma Infusion in the Plasma for Alzheimer Symptom Amelioration Study: A Randomized Clinical Trial
+
+            https://alzres.biomedcentral.com/articles/10.1186/s13195-020-00639-w
+            Young blood plasma reduces Alzheimer’s disease-like brain pathologies and ameliorates cognitive impairment in 3×Tg-AD mice
+            -->
+
             2023 August<br>
             Multi-omic rejuvenation and life span extension on exposure to youthful circulation<br>
             <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/37500973/">https://pubmed.ncbi.nlm.nih.gov/37500973/</a> <br>
@@ -244,6 +258,12 @@
             <a target="_blank" href="https://www.youngplasmastudy.com/about-7">https://www.youngplasmastudy.com/about-7/</a> <br>
             <br>
             -->
+
+            2014 June<br>
+            Young blood reverses age-related impairments in cognitive function and synaptic plasticity in mice <br>
+            <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/24793238/">https://pubmed.ncbi.nlm.nih.gov/24793238/</a> <br>
+            <br>
+
 
           </div>
         </div> <!-- / .row -->
