--- a/services.html
+++ b/services.html
@@ -164,6 +164,7 @@
             Brain Frequency <br />
             Transcranial Magnetic Stimulation <br />
             Neurofeedback from Peak Brain Institute<br />
+            <!-- Stellate Ganglion Block <br /> -->
             Deep Dive Medical Consultation <br />
             <br />
 
