--- a/routine.html
+++ b/routine.html
@@ -228,7 +228,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>In the middle of the meal, if the meal has protein, EnzymixPro, Apex Energetics, 1-2 capsules</td>
 <tr><td>        </td><td>Blood Vessel Formula, Gladdin Longevity, 1-2 ml</td>
 <tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
-<tr><td>        </td><td>Brush teeth 30-40 minutes after eating</td>
+<tr><td>        </td><td>Brush teeth 30-40 minutes after eating.  45-degree angle, make circles, be gentle, look at gums.</td>
 </table>
 
               
@@ -268,6 +268,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td><a href="vsels.html" target="_blank">VSEL stem cells</a> </td>
 <tr><td> </td><td>Ozone EBO2 <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Check CPAP machine apnea-hypopnea index </td>
+<tr><td> </td><td>Change toothbrush </td>
 <!--<tr><td> </td><td>UV blood iradiation</td>-->
 <!--<tr><td> </td><td>Plaquex</td>-->
 </table>
