--- a/routine.html
+++ b/routine.html
@@ -139,7 +139,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td>6:00 AM </td><td>Turn on lights at full brightness to set circadian rhythm</td>
 <tr><td>        </td><td>Molecular hydrogen, one tablet in one cup of water</td>
-<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td>
+<!--<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td>-->
 <tr><td>        </td><td>Rinse mouth with xylitol tablets </td>
 <tr><td>        </td><td>Brisk walk outside 30 minutes</td>
 <tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td> <!-- before sunscreen else it blocks red/IR light?-->
@@ -151,16 +151,18 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>8:30 AM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td>
 <tr><td>9:00 AM </td><td>Breakfast</td>
 <tr><td>        </td><td>Two pastured eggs and sunflower greens </td>
-<tr><td>        </td><td>Blend avocado, frisee, bok choy, blackberries, pomegranate seeds, lime or lemon juice, water.</td>
-<tr><td>        </td><td>The prebiotic vegetables above such as frisee etc are varied daily to create a diverse microbiome</td>
+<tr><td>        </td><td>Blend avocado, frisee, endive, blackberries, cranberries, <!--pomegranate seeds, --> lime or lemon juice, water.</td>
+<tr><td>        </td><td>The prebiotic vegetables above are varied daily to create a diverse microbiome</td>
 <tr><td>        </td><td>Macadamia nuts</td>
+<tr><td>        </td><td>Cacao nibs</td>
 <tr><td>        </td><td>Olive oil, 1 tbsp</td>
 <!--<tr>        <td></td><td>Vegetable prebiotic mashup drink</td>-->
 <tr><td>        </td><td><b>Morning supplements:</b></td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Vitamin D3, Jarrow, 5000IU</td>
-<tr><td>        </td><td>Krill Oil, Mercola, 1-2 capsules</td>
+<!--<tr><td>        </td><td>Krill Oil, Mercola, 1-2 capsules</td>-->
 <tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsule</td>
+<tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
 <tr><td>        </td><td>Lycopene 10 mg, NOW Foods, 1 capsule</td>
 <tr><td>        </td><td>Arterosil, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Biotin 5mg, Allergy Research Group, 1 capsule</td>
@@ -168,10 +170,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9686558/" target="_blank">Link</a> </td>
 <tr><td>        </td><td>Black Cumin Seed Oil, Sports Nutrition, 1 capsule</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a> </td>
-<!--<tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>-->
 <!--<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>-->
-<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td>
-<tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
+<!--<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td>-->
 <tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
@@ -181,16 +181,21 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Longenesis, Energy Blueprint Labs, 6 capsules</td>-->
 <!--<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>-->
 <tr><td>        </td><td><b>Morning supplements in powder form:</b></td>
-<tr><td>        </td><td>Fermented Beet Powder, 2 servings</td>
-<tr><td>        </td><td>Ceylon Cinnamon powder, 1/2 tsp</td>
-<tr><td>        </td><td>Parsley powder, 1/2 tsp</td>
+<tr><td>        </td><td>Fermented beet powder, 2 servings</td>
+<tr><td>        </td><td>Pomegranate peel powder, 1/2 tsp</td>
+<tr><td>        </td><td>Cordyceps mushroom powder, Real Mushrooms</td>
+<tr><td>        </td><td>5 Defenders mushroom powder, Real Mushrooms</td>
+<tr><td>        </td><td>Ceylon cinnamon powder, 1/2 tsp</td>
+<tr><td>        </td><td>Parsley powder, 1/4 tsp</td>
 <tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
-<tr><td>        </td><td>Mushroom powders...</td>
 <!--<tr><td>        </td><td>Ginger powder, 1/2 tsp</td>-->
 <!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>-->
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td>-->
-<tr><td>11:00 AM </td><td>Lunch</td>
-<tr><td>        </td><td>Soup (lentils, leaks, celery, chicken, salt), dark leafy greens, razzberries, cacao nibs</td>
+<tr><td>12:00 PM </td><td>Lunch</td>
+<tr><td>        </td><td>Soup consisting of lentils cooked in a pressure cooker, leaks, celery, salmon, salt</td>
+<tr><td>        </td><td>Mixed leafy greens</td>
+<tr><td>        </td><td>Berries</td>
+<tr><td>        </td><td>Dark chocolate 88% cacao</td>
 <tr><td>        </td><td>Turn on range hood vent while cooking for air quality.</td>
 <!--<tr><td>        </td><td>Chew dark leafy greens slowly and thoroughly to maximize reduction of nitrate to nitrite</td>-->
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>-->
@@ -198,21 +203,21 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face, no sunscreen</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest <a href="https://www.youtube.com/watch?v=AKGrmY8OSHM" target="_blank">Link</a> + NuCalm <a href="https://www.nucalm.com/" target="_blank">Link</a></td>
 <tr><td>4:00 PM </td><td>Dinner, as early as possible</td>
-<tr><td>        </td><td>Chicken or salmon, pearled sorghum, various steamed vegetables</td>
+<tr><td>        </td><td>Chicken, pearled sorghum, various steamed vegetables</td>
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td>
 <tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 1 capsule</td>
-<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
-<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td>
+<!--<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>-->
+<!--<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td>-->
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>-->
 <tr><td>        </td><td>Floss teeth </td>
 <tr><td>        </td><td>Tounge scraper </td>
 <tr><td>        </td><td>Hydro Floss with small amount of hydrogen peroxide </td>
 <!--<tr><td>        </td><td>Sometimes dental oil pulling </td>-->
-<tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
-<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td>
+<tr><td>7:00 PM </td><td>Lights dimmed to prepare for sleep</td>
+<!--<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td>-->
 <tr><td>        </td><td>Turn off computer </td>
 <tr><td>        </td><td>Put on tinted glasses </td>
 <tr><td>        </td><td>Read in dim light </td>
@@ -264,7 +269,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td><a href="plasma-dilution.html" target="_blank">Plasma dilution</a></td>
-<tr><td> </td><td><a href="young-plasma.html" target="_blank">Young plasma</a> </td>
+<!--<tr><td> </td><td><a href="young-plasma.html" target="_blank">Young plasma</a> </td>-->
 <tr><td> </td><td><a href="vsels.html" target="_blank">VSEL stem cells</a> </td>
 <tr><td> </td><td>Ozone EBO2 <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Check CPAP machine apnea-hypopnea index </td>
@@ -295,7 +300,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Biyearly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Go to dentist for teeth cleaning </td>
-<tr><td> </td><td>HVAC Service </td> <!--per michael rubino home cleanse-->
+<tr><td> </td><td>HVAC service </td> <!--per michael rubino home cleanse-->
 </table>
 
 <br>
