--- a/routine.html
+++ b/routine.html
@@ -141,11 +141,11 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Molecular hydrogen, one tablet in one cup of water</td>
 <!--<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td>-->
 <tr><td>        </td><td>Rinse mouth with xylitol tablets </td>
-<tr><td>        </td><td>Brisk walk outside 30 minutes</td>
+<tr><td>        </td><td>Brisk walk outside</td>
 <tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td> <!-- before sunscreen else it blocks red/IR light?-->
-<tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td>
+<!--<tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td>-->
 <!--<tr>        <td></td><td>Maragen ionic calcium in two cups of water</td>-->
-<tr><td>        </td><td>Start work, listen to AudioCardio app for one hour </td>
+<!--<tr><td>        </td><td>Start work, listen to AudioCardio app for one hour </td>-->
 <!--<tr><td>      </td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
 <tr><td>8:00 AM </td><td>Go outside in the sun to set circadian rhythm</td>
 <tr><td>8:30 AM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td>
@@ -192,11 +192,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>-->
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td>-->
 <tr><td>12:00 PM </td><td>Lunch</td>
+<tr><td>        </td><td>Turn on range hood vent while cooking for air quality</td>
 <tr><td>        </td><td>Soup consisting of lentils cooked in a pressure cooker, leaks, celery, salmon, salt</td>
 <tr><td>        </td><td>Mixed leafy greens</td>
+<tr><td>        </td><td>Olives</td>
 <tr><td>        </td><td>Berries</td>
 <tr><td>        </td><td>Dark chocolate 88% cacao</td>
-<tr><td>        </td><td>Turn on range hood vent while cooking for air quality.</td>
 <!--<tr><td>        </td><td>Chew dark leafy greens slowly and thoroughly to maximize reduction of nitrate to nitrite</td>-->
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>-->
 <tr><td>        </td><td>Go outside in the sun to produce dopamine in the eyes to prevent myopia</td>
