--- a/routine.html
+++ b/routine.html
@@ -140,7 +140,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>6:00 AM </td><td>Turn on lights at full brightness to set circadian rhythm</td>
 <tr><td>        </td><td>Molecular hydrogen, one tablet in one cup of water</td>
 <!--<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td>-->
-<tr><td>        </td><td>Rinse mouth with xylitol tablets </td>
+<tr><td>        </td><td>Rinse mouth with xylitol </td>
 <tr><td>        </td><td>Brisk walk outside</td>
 <tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td> <!-- before sunscreen else it blocks red/IR light?-->
 <!--<tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td>-->
@@ -193,7 +193,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td>-->
 <tr><td>12:00 PM </td><td>Lunch</td>
 <tr><td>        </td><td>Turn on range hood vent while cooking for air quality</td>
-<tr><td>        </td><td>Soup consisting of lentils cooked in a pressure cooker, leaks, celery, salmon, salt</td>
+<tr><td>        </td><td>Soup consisting of lentils, leaks, celery, salmon, salt.</td>
+<tr><td>        </td><td>(Lentils are cooked in a pressure cooker to reduce lectins)</td>
 <tr><td>        </td><td>Mixed leafy greens</td>
 <tr><td>        </td><td>Olives</td>
 <tr><td>        </td><td>Berries</td>
@@ -202,10 +203,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>-->
 <tr><td>        </td><td>Go outside in the sun to produce dopamine in the eyes to prevent myopia</td>
 <tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face, no sunscreen</td>
-<tr><td>3:00 PM </td><td>Non-Sleep Deep Rest <a href="https://www.youtube.com/watch?v=AKGrmY8OSHM" target="_blank">Link</a> + NuCalm <a href="https://www.nucalm.com/" target="_blank">Link</a></td>
+<!--<tr><td>3:00 PM </td><td>Non-Sleep Deep Rest <a href="https://www.youtube.com/watch?v=AKGrmY8OSHM" target="_blank">Link</a> + NuCalm <a href="https://www.nucalm.com/" target="_blank">Link</a></td>-->
 <tr><td>4:00 PM </td><td>Dinner, as early as possible</td>
 <tr><td>        </td><td>Chicken, pearled sorghum, various steamed vegetables</td>
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td>
+<tr><td>        </td><td>Berries</td>
+<tr><td>        </td><td>Dark chocolate 88% cacao</td>
 <tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 1 capsule</td>
