--- a/routine.html
+++ b/routine.html
@@ -196,6 +196,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Soup consisting of lentils, leaks, celery, salmon, salt.</td>
 <tr><td>        </td><td>(Lentils are cooked in a pressure cooker to reduce lectins)</td>
 <tr><td>        </td><td>Mixed leafy greens</td>
+<tr><td>        </td><td>Olive oil, 1 tbsp</td>
 <tr><td>        </td><td>Olives</td>
 <tr><td>        </td><td>Berries</td>
 <tr><td>        </td><td>Dark chocolate 88% cacao</td>
@@ -207,6 +208,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>4:00 PM </td><td>Dinner, as early as possible</td>
 <tr><td>        </td><td>Chicken, pearled sorghum, various steamed vegetables</td>
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td>
+<tr><td>        </td><td>Olive oil, 1 tbsp</td>
 <tr><td>        </td><td>Berries</td>
 <tr><td>        </td><td>Dark chocolate 88% cacao</td>
 <tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td>
