--- a/routine.html
+++ b/routine.html
@@ -338,8 +338,11 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Measure BOLT score (Body Oxygen Level Test)</td>
 <tr><td> </td><td>Check humidity level of home</td>
 <tr><td> </td><td>Test home for mold</td>
-<tr><td> </td><td>Test water for contaminants</td>
-<tr><td> </td><td>Test home for EMFs</td>
+<tr><td> </td><td>Test drinking water and shower water for contaminants</td>
+<tr><td> </td><td>Test home for radio frequency EMFs </td>
+<tr><td> </td><td>Test home for magnetic field EMFs </td>
+<tr><td> </td><td>Test home for electric field EMFs </td>
+<tr><td> </td><td>Test home for dirty electricity EMFs </td>
 <!--<tr><td> </td><td>Zinc taste test</td>-->
 <!--<tr><td> </td><td>Check stool is not floating</td>-->
 </table>
