--- a/routine.html
+++ b/routine.html
@@ -450,7 +450,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
     
 <tr><td> </td><td>No very loud noise - this causes hearing loss</td>
 
-<!--<tr><td> </td><td>Do not put fingers in nose</td>-->
+<!--<tr><td> </td><td>Do not put fingers in nose</td> https://www.sciencealert.com/research-in-mice-suggests-a-surprising-link-between-nose-picking-and-alzheimers -->
 <!--<tr><td> </td><td>Do not blow nose with bathroom toilet paper</td>-->
 <!--<tr><td> </td><td>Do not store toothbrush in bathroom</td>-->
 </table>
