--- a/routine.html
+++ b/routine.html
@@ -141,21 +141,21 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Molecular hydrogen, one tablet in one cup of water</td></tr>
 <!--<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td></tr>-->
 <tr><td>        </td><td>Rinse mouth with xylitol </td></tr>
-<tr><td>        </td><td>Brisk walk outside</td></tr>
+<tr><td>        </td><td>Jogging/running outside five miles</td></tr>
 <tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td></tr> <!-- before sunscreen else it blocks red/IR light?-->
 <!--<tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td></tr>-->
 <!--<tr>        <td></td><td>Maragen ionic calcium in two cups of water</td></tr>-->
 <!--<tr><td>        </td><td>Start work, listen to AudioCardio app for one hour </td></tr>-->
 <!--<tr><td>      </td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td></tr>-->
 <tr><td>8:00 AM </td><td>Go outside in the sun to set circadian rhythm</td></tr>
-<tr><td>8:30 AM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td></tr>
+<!--<tr><td>8:30 AM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td></tr>-->
 <tr><td>9:00 AM </td><td>Breakfast</td></tr>
-<tr><td>        </td><td>Two pastured eggs and sunflower greens </td></tr>
-<tr><td>        </td><td>Blend avocado, frisee, endive, blackberries, cranberries, <!--pomegranate seeds, --> lime or lemon juice, water.</td></tr>
+<tr><td>        </td><td>Two pastured eggs and sunflower greens</td></tr>
+<tr><td>        </td><td>Blend avocado, frisee, radicchio, blackberries, cranberries, <!--pomegranate seeds, --> lime or lemon juice, water.</td></tr>
 <tr><td>        </td><td>The prebiotic vegetables above are varied daily to create a diverse microbiome</td></tr>
-<tr><td>        </td><td>Macadamia nuts</td></tr>
-<tr><td>        </td><td>Cacao nibs</td></tr>
 <tr><td>        </td><td>Olive oil, 1 tbsp</td></tr>
+<tr><td>        </td><td>Cacao nibs</td></tr>
+<tr><td>        </td><td>Macadamia nuts</td></tr>
 <!--<tr>        <td></td><td>Vegetable prebiotic mashup drink</td></tr>-->
 <tr><td>        </td><td><b>Morning supplements:</b></td></tr>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td></tr>
@@ -203,10 +203,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Chew dark leafy greens slowly and thoroughly to maximize reduction of nitrate to nitrite</td></tr>-->
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td></tr>-->
 <tr><td>        </td><td>Go outside in the sun to produce dopamine in the eyes to prevent myopia</td></tr>
-<tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face, no sunscreen</td></tr>
+<!--<tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face, no sunscreen</td></tr>-->
 <!--<tr><td>3:00 PM </td><td>Non-Sleep Deep Rest <a href="https://www.youtube.com/watch?v=AKGrmY8OSHM" target="_blank">Link</a> + NuCalm <a href="https://www.nucalm.com/" target="_blank">Link</a></td></tr>-->
 <tr><td>4:00 PM </td><td>Dinner, as early as possible</td></tr>
-<tr><td>        </td><td>Chicken, pearled sorghum, various steamed vegetables</td></tr>
+<tr><td>        </td><td>Chicken, pearled sorghum, steamed asparagus</td></tr>
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td></tr>
 <tr><td>        </td><td>Olive oil, 1 tbsp</td></tr>
 <tr><td>        </td><td>Berries</td></tr>
@@ -222,12 +222,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Tounge scraper </td></tr>
 <tr><td>        </td><td>Hydro Floss with small amount of hydrogen peroxide </td></tr>
 <!--<tr><td>        </td><td>Sometimes dental oil pulling </td></tr>-->
-<tr><td>7:00 PM </td><td>Lights dimmed to prepare for sleep</td></tr>
+<tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td></tr>
 <!--<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td></tr>-->
 <tr><td>        </td><td>Turn off computer </td></tr>
 <tr><td>        </td><td>Put on tinted glasses </td></tr>
 <tr><td>        </td><td>Read in dim light </td></tr>
-<tr><td>9:00 PM </td><td>Turn on air conditioner</td></tr>
+<tr><td>9:00 PM </td><td>If summer season then turn on air conditioner</td></tr>
 <tr><td>10:00 PM</td><td>Go to sleep </td></tr>
 </table>
 
@@ -258,7 +258,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>When Outside</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>If after 8AM apply mineral sunscreen to face and wear UV-blocking glasses </td></tr>
-<tr><td>        </td><td>Wear hat with wide brim to protect facial skin from UV light </td></tr>
+<tr><td>        </td><td>If after 8AM Wear hat with wide brim to protect facial skin from UV light </td></tr>
 <tr><td>        </td><td>Practice intermittent hypoxic training </td></tr>
 <tr><td>        </td><td>Look far away </td></tr>
 </table>
