--- a/routine.html
+++ b/routine.html
@@ -193,7 +193,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td></tr>-->
 <tr><td>12:00 PM </td><td>Lunch</td></tr>
 <tr><td>        </td><td>Turn on range hood vent while cooking for air quality</td></tr>
-<tr><td>        </td><td>Soup consisting of lentils, leaks, celery, salmon, salt.</td></tr>
+<tr><td>        </td><td>Soup consisting of lentils, onion, leak, salmon, salt.</td></tr>
 <tr><td>        </td><td>(Lentils are cooked in a pressure cooker to reduce lectins)</td></tr>
 <tr><td>        </td><td>Mixed leafy greens</td></tr>
 <tr><td>        </td><td>Olive oil, 1 tbsp</td></tr>
