--- a/routine.html
+++ b/routine.html
@@ -413,6 +413,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Minimal carbs at breakfast</td></tr>
 <tr><td> </td><td>No eating the same foods every day</td></tr>
 <tr><td> </td><td>No grain-fed chicken, no Whole Foods chicken</td></tr>
+<tr><td> </td><td>When cooking chicken use a thermometer to make sure it is 165°F </td></tr>
 <!-- no pre cut pre packaged salads per gundry -->
 <tr><td> </td><td>No chocolate with high heavy metals</td></tr>
 <!--<tr><td> </td><td>No kale if it contains heavy metals</td></tr>-->
