--- a/routine.html
+++ b/routine.html
@@ -141,20 +141,19 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Molecular hydrogen, one tablet in one cup of water</td></tr>
 <!--<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td></tr>-->
 <tr><td>        </td><td>Rinse mouth with xylitol </td></tr>
-<tr><td>        </td><td>Jogging/running outside five miles</td></tr>
+<tr><td>        </td><td>Run outside a few miles</td></tr>
 <tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td></tr> <!-- before sunscreen else it blocks red/IR light?-->
 <!--<tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td></tr>-->
 <!--<tr>        <td></td><td>Maragen ionic calcium in two cups of water</td></tr>-->
 <!--<tr><td>        </td><td>Start work, listen to AudioCardio app for one hour </td></tr>-->
 <!--<tr><td>      </td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td></tr>-->
-<tr><td>8:00 AM </td><td>Go outside in the sun to set circadian rhythm</td></tr>
+<tr><td>8:00 AM </td><td>Go outside in the sun a few minutes to set circadian rhythm</td></tr>
 <!--<tr><td>8:30 AM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td></tr>-->
 <tr><td>9:00 AM </td><td>Breakfast</td></tr>
 <tr><td>        </td><td>Two pastured eggs and sunflower greens</td></tr>
 <tr><td>        </td><td>Blend avocado, frisee, radicchio, blackberries, cranberries, <!--pomegranate seeds, --> lime or lemon juice, water.</td></tr>
 <tr><td>        </td><td>The prebiotic vegetables above are varied daily to create a diverse microbiome</td></tr>
 <tr><td>        </td><td>Olive oil, 1 tbsp</td></tr>
-<tr><td>        </td><td>Cacao nibs</td></tr>
 <tr><td>        </td><td>Macadamia nuts</td></tr>
 <!--<tr>        <td></td><td>Vegetable prebiotic mashup drink</td></tr>-->
 <tr><td>        </td><td><b>Morning supplements:</b></td></tr>
@@ -193,13 +192,11 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td></tr>-->
 <tr><td>12:00 PM </td><td>Lunch</td></tr>
 <tr><td>        </td><td>Turn on range hood vent while cooking for air quality</td></tr>
-<tr><td>        </td><td>Soup consisting of lentils, onion, leak, salmon, salt.</td></tr>
+<tr><td>        </td><td>Soup consisting of lentils, onion, leek, salmon, salt.</td></tr>
 <tr><td>        </td><td>(Lentils are cooked in a pressure cooker to reduce lectins)</td></tr>
 <tr><td>        </td><td>Mixed leafy greens</td></tr>
-<tr><td>        </td><td>Olive oil, 1 tbsp</td></tr>
 <tr><td>        </td><td>Olives</td></tr>
 <tr><td>        </td><td>Berries</td></tr>
-<tr><td>        </td><td>Dark chocolate 88% cacao</td></tr>
 <!--<tr><td>        </td><td>Chew dark leafy greens slowly and thoroughly to maximize reduction of nitrate to nitrite</td></tr>-->
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td></tr>-->
 <tr><td>        </td><td>Go outside in the sun to produce dopamine in the eyes to prevent myopia</td></tr>
@@ -208,9 +205,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>4:00 PM </td><td>Dinner, as early as possible</td></tr>
 <tr><td>        </td><td>Chicken, pearled sorghum, steamed asparagus</td></tr>
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td></tr>
-<tr><td>        </td><td>Olive oil, 1 tbsp</td></tr>
 <tr><td>        </td><td>Berries</td></tr>
-<tr><td>        </td><td>Dark chocolate 88% cacao</td></tr>
 <tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td></tr>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td></tr>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 1 capsule</td></tr>
