--- a/routine.html
+++ b/routine.html
@@ -240,7 +240,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>Throughout the day</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Stand at a standup desk while working</td></tr>
+<tr><td> </td><td>Stand at a standup desk as long as possible while working</td></tr>
 <tr><td> </td><td>Maintain correct spine posture</td></tr>
 <tr><td> </td><td>Various short exercises </td></tr>
 <tr><td> </td><td>Go outside</td></tr>
