--- a/routine.html
+++ b/routine.html
@@ -259,6 +259,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 </table>
 
 <br>
+<p><b>Weekly Routine</b></p>
+<table style="celllpadding: 100px">
+<tr><td>        </td><td>Grounding on grass outside</td></tr>
+</table>
+
+<br>
 <p><b>Monthly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Dehumidifier maintenance </td></tr>
